<resources>

    <string name="you_know_nothing">You know nothing</string>

    <string name="app_name">BetterLife</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--  tool bar title -->
    <string name="personnal_goal">我的任務</string>
    <string name="other_goal">探索任務</string>
    <string name="better_life">Better Life</string>

    <!--  Home Page viewPager Title -->
    <string name="SingleWork">個人</string>
    <string name="Teamwork">雙人合作</string>
    <string name="completed">已完成</string>


    <string name="text_sum">累積時間 : </string>
    <string name="text_target">目標時間 : </string>

    <string name="text_nofilter">不分類</string>
    <string name="text_study">學習</string>
    <string name="text_exercise">運動</string>
    <string name="text_habbit">興趣</string>
    <string name="text_other">其他</string>


    <string name="image_other">Image_other</string>
    <string name="text_goal">目標名稱</string>
    <string name="text_goal_category">目標分類</string>
    <string name="text_goal_image">目標圖像</string>
    <string name="text_goal_target">目標設定</string>
    <string name="button_addTask">創建任務</string>
    <string name="text_goal_invited">雙人合作</string>
    <string name="text_goal_target_daily">每日目標</string>
    <string name="text_goal_target_total">總目標</string>
    <string name="text_minute">分鐘</string>
    <string name="text_enough">今天就先這樣吧!</string>
    <string name="text_done">終於完成了!</string>
    <string name="text_team"> 合作 </string>
    <string name="text_isGroup"> 夥伴 </string>
    <string name="text_own"> 我 </string>

    <!--Login-->
    <string name="login_success">登入成功</string>
    <string name="login_name_unknown">無名氏</string>

    <string name="text_NoUser">無此使用者</string>

    <string-array name="category_array">
        <item>學習</item>
        <item>運動</item>
        <item>興趣</item>
        <item>其他</item>
    </string-array>
    <!-- Choose face -->
    <string name="dialog_choose_face">選擇頭像:</string>
    <!-- Date Pattern -->
    <string name="barchart_month_date">MMM dd</string>
    <string name="diary_record_time">HH : mm</string>
    <string name="post_record_date">MMM dd, yyyy</string>
    <string name="workout_count_down">%02d:%02d</string>
    <string name="detail_end_date">截止時間: yyyy 年 MM 月 dd 日</string>
    <string name="diary_record_date">dd/MM/yyyy</string>
    <string name="diary_select_date">d/M/yyyy</string>
    <string name="text_timer_targetText">每日平均時間 :</string>
    <string name="text_timer_dailyTargetText">每日目標時間 :</string>
    <string name="text_rank">累計排名</string>
    <string name="text_rank_nothing">從缺</string>

    <string name="text_todayNotDone">未執行</string>
    <string name="text_todayDone">已執行</string>
    <string name="text_taskDone">任務已完成</string>
    <string name="text_login_title">Better Life</string>
    <string name="text_login">Task Management</string>
    <string name="text_target_total">目標完成條件</string>
    <string name="text_selectDate">截止日期</string>
    <string name="text_selectTime">總達成時間</string>
    <string name="text_duedata">截止日期 : </string>
    <string name="text_totalday">達標天數 / 總天數</string>
    <string name="text_noitem">無任務</string>

    <string name="radio_count_target">達成每日目標</string>
    <string name="radio_count_noLimit">不限制時間</string>
    <string name="text_sum_team">累積/目標</string>


</resources>