<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <import type="com.scolley.betterlife.newwork.LoadApiStatus" />

        <variable
            name="viewModel"
            type="com.scolley.betterlife.other.OtherViewModel" />
        <variable
            name="category"
            type="com.scolley.betterlife.data.Category" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_f5f5f5">


<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/animationView"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:elevation="8dp"-->
<!--            android:visibility="@{viewModel.status == LoadApiStatus.LOADING ? View.VISIBLE : View.GONE}"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_loop="true"-->
<!--            app:lottie_rawRes="@raw/loading"-->
<!--            tools:visibility="invisible" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/nofilter"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@{viewModel.category == category.NOFILTER ? @drawable/border_line_otherfilter_dark : @drawable/border_line_otherfilter}"
                android:onClick="@{() -> viewModel.getCategoryTask(category.NOFILTER)}"
                android:text="@string/text_nofilter"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@{viewModel.category == category.NOFILTER ? @color/white : @color/black}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_study"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/text_study"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@{viewModel.category == category.STUDY ? @drawable/border_line_otherfilter_dark : @drawable/border_line_otherfilter}"
                android:onClick="@{() -> viewModel.getCategoryTask(category.STUDY)}"
                android:text="@string/text_study"
                android:textColor="@{viewModel.category == category.STUDY ? @color/white : @color/black}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/nofilter"
                app:layout_constraintEnd_toStartOf="@+id/text_exercise"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/nofilter"
                app:layout_constraintTop_toTopOf="@+id/nofilter" />

            <Button
                android:id="@+id/text_exercise"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@{viewModel.category == category.EXERCISE ? @drawable/border_line_otherfilter_dark : @drawable/border_line_otherfilter}"
                android:onClick="@{() -> viewModel.getCategoryTask(category.EXERCISE)}"
                android:text="@string/text_exercise"
                android:textColor="@{viewModel.category == category.EXERCISE ? @color/white : @color/black}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_study"
                app:layout_constraintEnd_toStartOf="@+id/text_habit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_study"
                app:layout_constraintTop_toTopOf="@+id/text_study" />

            <Button
                android:id="@+id/text_habit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@{viewModel.category == category.HABIT ? @drawable/border_line_otherfilter_dark : @drawable/border_line_otherfilter}"
                android:onClick="@{() -> viewModel.getCategoryTask(category.HABIT)}"
                android:text="@string/text_habbit"
                android:textColor="@{viewModel.category == category.HABIT ? @color/white : @color/black}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_exercise"
                app:layout_constraintEnd_toStartOf="@+id/text_other"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_exercise"
                app:layout_constraintTop_toTopOf="@+id/text_exercise" />

            <Button
                android:id="@+id/text_other"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:autoSizeTextType="uniform"
                android:autoText="false"
                android:background="@{viewModel.category == category.OTHER ? @drawable/border_line_otherfilter_dark : @drawable/border_line_otherfilter}"
                android:onClick="@{() -> viewModel.getCategoryTask(category.OTHER)}"
                android:text="@string/text_other"
                android:textColor="@{viewModel.category == category.OTHER ? @color/white : @color/black}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_habit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_habit"
                app:layout_constraintTop_toTopOf="@+id/text_habit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_other"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            app:plans="@{viewModel.otherPlan}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>